<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ReportProductsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/title_report_products"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:paddingBottom="15dp"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Buscar"
        android:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        >


        <TableRow
            android:background="@color/gris_100"
            android:padding="10dp"
           >
            <TextView
                android:layout_width="0dp"
                android:text="@string/tbl_col_product"
                android:layout_weight="1"
                android:textAlignment="center"
                 />
            <TextView
                android:layout_width="0dp"
                android:text="@string/tbl_col_costo"
                android:layout_weight="1"
                android:textAlignment="center"

                />
            <TextView
                android:layout_width="0dp"
                android:text="@string/tbl_col_price_reventa"
                android:layout_weight="1"
                android:textAlignment="center"

                />
            <TextView
                android:layout_width="0dp"
                android:text="@string/tbl_col_stock"
                android:layout_weight="1"
                android:textAlignment="center"

                />

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/gris"
            android:paddingTop="20dp"/>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>