<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    tools:context=".LoginActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/title_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:text="@string/subtitle_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/version_login"
            android:paddingBottom="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            android:hint="@string/edt_hint_user"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:background="@android:color/transparent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:hint="@string/edt_hint_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingresar"
        android:padding="15dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>